[tool.poetry]
name = "langgraph-agents"
version = "0.1.0"
description = ""
authors = ["mauudev <mtrigo1432@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.4.3"
langchain = {extras = ["openai"], version = "^0.3.25"}
python-dotenv = "^1.1.0"
graphviz = "0.20.1"
typing-extensions = "^4.13.2"
numpy = "^2.2.5"
ipython = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
